--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
 
         </div>
     </section>
-    <button type="">Acheter de l'eau</button>
+    <button id="popin-eau">Acheter de l'eau</button>
     <section id="achat-eau">
         <div id="menu-achat">
-
+            <form>
+                <input type="number" name="quantity">
+                <input type="submit" name="buy" value="Acheter">
+            </form>
         </div>
     </section>
 </body>
