--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <section id="infos">
+        <div id="recoltes">
+
+        </div>
+
 
     </section>
     <section id=champ1>
@@ -45,10 +49,13 @@
 
         </div>
     </section>
-    <button type="">Acheter de l'eau</button>
+    <button id="popin-eau">Acheter de l'eau</button>
     <section id="achat-eau">
         <div id="menu-achat">
-
+            <form>
+                <input type="number" name="quantity">
+                <input type="submit" name="buy" value="Acheter">
+            </form>
         </div>
     </section>
 </body>
