Change dryfields.js -> App.js / Creation style.css / Ajout script des fichiers js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="./style/style.css" rel="stylesheet">
+    <script src="./controllers/GameController.js"></script>
+    <script src="./models/Game.js"></script>
+    <script src="./tools/EventEmitter.js"></script>
+    <script src="./views/GameView.js"></script>
+    <script src="./views/ScoreView.js"></script>
+    <script src="./App.js"></script>
 </head>
 
 <body>
