Change App.js -> dryfields.js / Ajout script jquery-3.2.1.js

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./style/style.css" rel="stylesheet">
+    <script src="./jquery-3.2.1.js"></script>
     <script src="./controllers/GameController.js"></script>
     <script src="./models/Game.js"></script>
     <script src="./tools/EventEmitter.js"></script>
     <script src="./views/GameView.js"></script>
     <script src="./views/ScoreView.js"></script>
-    <script src="./App.js"></script>
+    <script src="./dryfields.js"></script>
 </head>
 
 <body>
