--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./style/style.css" rel="stylesheet">
-    <script src="./jquery-3.2.1.js"></script>
+    <script src="./tools/jquery-3.2.1.js"></script>
+    <script src="./tools/EventEmitter.js"></script>
     <script src="./controllers/GameController.js"></script>
     <script src="./models/Game.js"></script>
-    <script src="./tools/EventEmitter.js"></script>
     <script src="./views/GameView.js"></script>
     <script src="./views/ScoreView.js"></script>
     <script src="./dryfields.js"></script>
@@ -58,12 +58,10 @@
     </section>
     <button id="popin-eau">Acheter de l'eau</button>
     <section id="achat-eau">
-        <div id="menu-achat">
-            <form>
-                <input type="number" name="quantity">
-                <input type="submit" name="buy" value="Acheter">
-            </form>
-        </div>
+        <form id="menu-achat">
+            <input type="number" name="quantity" id="eau-qty">
+            <input type="submit" name="buy" value="Acheter">
+        </form>
     </section>
 </body>
 
