--- a/index.html
+++ b/index.html
@@ -13,56 +13,60 @@
     <script src="./views/GameView.js"></script>
     <script src="./views/ScoreView.js"></script>
     <script src="./dryfields.js"></script>
+
+    <script type="text/javascript">
+
+    </script>
 </head>
 
 <body>
-    <section id="infos">
-        <div id="recoltes">
+<section id="infos">
+    <div id="recoltes">
 
-        </div>
+    </div>
 
 
-    </section>
-    <section id=champ1>
-        <div id="irrig-chp1">
+</section>
+<section id=champ1>
+    <div id="irrig-chp1">
 
-        </div>
-        <div id="etat-champ1">
+    </div>
+    <div id="etat-champ1">
 
-        </div>
-        <div id="recolt-chp1">
+    </div>
+    <div id="recolt-chp1">
 
-        </div>
-    </section>
-    <section id=champ2>
-        <div id="irrig-chp2">
+    </div>
+</section>
+<section id=champ2>
+    <div id="irrig-chp2">
 
-        </div>
-        <div id="etat-champ2">
+    </div>
+    <div id="etat-champ2">
 
-        </div>
-        <div id="recolt-chp2">
+    </div>
+    <div id="recolt-chp2">
 
-        </div>
-    </section>
-    <section id=champ3>
-        <div id="irrig-chp3">
+    </div>
+</section>
+<section id=champ3>
+    <div id="irrig-chp3">
 
-        </div>
-        <div id="etat-champ3">
+    </div>
+    <div id="etat-champ3">
 
-        </div>
-        <div id="recolt-chp3">
+    </div>
+    <div id="recolt-chp3">
 
-        </div>
-    </section>
-    <button id="popin-eau">Acheter de l'eau</button>
-    <section id="achat-eau">
-        <form id="menu-achat">
-            <input type="number" name="quantity" id="eau-qty">
-            <input type="submit" name="buy" value="Acheter">
-        </form>
-    </section>
+    </div>
+</section>
+<button id="popin-eau">Acheter de l'eau</button>
+<section id="achat-eau">
+    <form id="menu-achat">
+        <input type="number" name="quantity" id="eau-qty">
+        <input type="submit" name="buy" value="Acheter">
+    </form>
+</section>
 </body>
 
 </html>
