--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="harvests">
 
         </div>
-        <div id="water">
+        <div id="water-reserve">
 
         </div>
         <div id="money">
@@ -67,6 +67,9 @@
     <section id="water">
         <button id="popin-eau">Acheter de l'eau</button>
         <div id="achat-eau">
+            <div id="water-price">
+
+            </div>
             <form id="menu-achat">
                 <input type="number" name="quantity" id="eau-qty">
                 <input type="submit" name="buy" value="Acheter">
@@ -76,8 +79,14 @@
 
     <section id="scores">
         <div>
-
+            Votre score: <span id="score-user"></span>
         </div>
+        <form id="scores-form">
+            <input id="user-name" type="text" name="score-name" placeholder="Entrez votre pseudo ...">
+            <input type="submit" name="valid-score" value="Valider">
+        </form>
+        <ul id="scores-list">
+        </ul>
     </section>
 
 </body>
